# Quoridor

./: dev-requirements.txt  game.py  multiplayer.py  old_version_game.py  pyproject.toml  singleplayer.py  tasks.py  test_simulations.py
.github/workflows/: ci.yaml  lear-github-actions.yaml
agents/: montecarlo.py
domain/: actions.py  state.py
src/: multiplayer.py  old_version_game.py  singleplayer.py  test_simulations.py
src/agents/: __init__.py  montecarlo.py
src/domain/: __init__.py  actions.py  state.py
