[project]
name = "Quoridor_ML"
authors = [
    {name = "Erik", email = "please give me email"},
    {name = "Arwi", email = "arwindersingh021@gmail.com"},
]
description = "A game model for playing quoridor with ML"
requires-python = ">=3.10"
keywords = ["Quoridor", "Machine Learning"]
license = {text = "Open Source GLPL2.1"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Computer Science :: Machine Learning",
]
dependencies = [
    "toml==0.10.2",
    "networkx"
]

[project.optional-dependencies]
dev = [
    "invoke",
    "rich",
    "black==22.12.0",
    "ruff==0.0.259",
    "mypy==1.6.0",
    "pytest==7.2.1",
    "pre-commit",
    "types-networkx"
]